[package]
name = "stack-debug"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/kellpossible/stack-debug"
readme = "README.md"
description = "An experimental Rust crate with a macro for instrumenting functions to print stack sizes to debug stack overflows"
keywords = ["stack", "usage", "analysis", "debug"]

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
tracing = { version = "0.1", optional = true }

[lib]
proc-macro = true

[workspace]
members = [".", "examples/example"]